[project]
name = "cdf-bootcamp-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmed AlSahaf",email = "me@asahaf.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "cognite-toolkit (==0.5.30)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
